# rs-art-bot

./: .env.example  .gitignore  Cargo.toml  README.md  config.json1  config.sample.json  promt-sample.txt
rsys_log/: Cargo.toml  README.md
rsys_log/src/: colorscheme.rs  lib.rs
src/: config.rs  db.rs  generator.rs  logging.rs  main.rs
