[package]
name = "rs-bot-art"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
teloxide = { version = "0.17", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "gif", "bmp", "ico", "tiff", "webp"] }
once_cell = "1"
thiserror = "1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
time = { version = "0.3", features = ["macros", "local-offset"] }
base64 = "0.22"
tokio-rusqlite = "0.5"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
rsys_log = { path = "rsys_log" }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
